--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -6,4 +6,76 @@ body {
   background-color: #111;
   font-family: sans-serif;
   color: aliceblue;
+  padding: 1rem;
+  font-family: 'DM Sans', sans-serif;
+  background-image: url(../../assets/images/bg-dark-theme.png);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 55%;
+}
+
+.icon-container {
+  width: 32px;
+  height: 32px;
+  background-color: #2a2b37;
+  padding: 0.375rem;
+  border-radius: 0.375rem;
+}
+
+.title {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.text-area {
+  width: 343px;
+  height: 200px;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border: none;
+  border-radius: 0.75rem;
+  color: #e4e4ef;
+  background-color: #21222c;
+  font-size: 1.25rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 343px;
+  height: 130px;
+  margin-bottom: 1rem;
+  border-radius: 0.75rem;
+  padding-inline: 1.25rem;
+  background-repeat: no-repeat;
+  background-position: 250px center;
+  color: #12131a;
+}
+
+.card-total-characters {
+  background-color: #d3a0fa;
+  background-image: url(../../assets/images/pattern-character-count.svg);
+}
+.card-word-count {
+  background-color: #ff9f00;
+  background-image: url(../../assets/images/pattern-word-count.svg);
+}
+.card-sentence-count {
+  background-color: #fe8159;
+  background-image: url(../../assets/images/pattern-sentence-count.svg);
+}
+
+.card-counter {
+  font-weight: 700;
+  font-size: 2.5rem;
 }
